samples/_failures_safe/1761205707_15060b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a10f0ba0.c: In function ‘main’:
./samples/SAFE/__tmp_a10f0ba0.c:158:16: error: missing terminating " character
  158 |         printf("Graph is connected
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a10f0ba0.c:158:9: error: expected expression at end of input
  158 |         printf("Graph is connected
      |         ^~~~~~
./samples/SAFE/__tmp_a10f0ba0.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a10f0ba0.c:158:9: error: expected declaration or statement at end of input
